--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,22 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
-
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+<h1>Bem vindo! Faça seu pedido!</h1>
+  <img src="assets/imgs/pedido.png" alt="logo"> 
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v3">docs</a> will show you the way.
-  </p>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <form>
+<ion-item>
+  <ion-label stacked>Email </ion-label>
+  <ion-input type="text"></ion-input>
+</ion-item>
+<ion-item>
+  <ion-label>Senha</ion-label>
+  <ion-input type="password"></ion-input>
+</ion-item>
+  
+<button ion-button block>Entrar</button>
+</form>
+<button ion-button block>Não tem Conta? Cadastra-se</button>
+
+
+
 </ion-content>
