--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -8,5 +8,15 @@
 </ion-header>
 
 <ion-content padding>
-<p>Pagina de categorias</p>
+<ion-list>
+<!--O componente "*ngFor = " let item of items" serve que o conteudo seja repitido varias vezes --> 
+ <button ion-item *ngFor = " let item of items"> 
+<ion-thumbnail item-start>
+  <img src="{{bucketUrl}}/cat{{item.id}}.jpg">
+</ion-thumbnail>
+<!--para pegar os nomes das categorias na API que foi criada, preciso realizar dessa forma abaixo-->
+<h2>{{item.nome}}</h2>
+</button>
+
+</ion-list>
 </ion-content>
